complete/data/corpus/corpus647769.txt
Question (ID-647769): Why can't Python's raw string literals end with a single backslash? Technically, any odd number of backslashes, as described in the docs . 

 &gt;&gt;&gt; r'\'
 File "&lt;stdin&gt;", line 1
 r'\'
  ^
SyntaxError: EOL while scanning string literal
&gt;&gt;&gt; r'\\'
'\\\\'
&gt;&gt;&gt; r'\\\'
 File "&lt;stdin&gt;", line 1
 r'\\\'
   ^
SyntaxError: EOL while scanning string literal
 

 It seems like the parser could just treat backslashes in raw strings as regular characters (isn't that what raw strings are all about?), but I'm probably missing something obvious. TIA! 
 Answers (Total-9): #0 The reason is explained in the part of that section which I highlighted in bold: 

 
 String quotes can be escaped with a
 backslash, but the backslash remains
 in the string; for example, r"\"" is a
 valid string literal consisting of two
 characters: a backslash and a double
 quote; r"\" is not a valid string
 literal (even a raw string cannot end
 in an odd number of backslashes).
 Specifically, a raw string cannot end
 in a single backslash (since the
 backslash would escape the following
 quote character). Note also that a
 single backslash followed by a newline
 is interpreted as those two characters
 as part of the string, not as a line
 continuation. 
 

 So raw strings are not 100% raw, there is still some rudimentary backslash-processing. 
 #1 That's the way it is! I see it as one of those small defects in python! 

 I don't think there's a good reason for it, but it's definitely not parsing; it's really easy to parse raw strings with \ as a last character. 

 The catch is, if you allow \ to be the last character in a raw string then you won't be able to put " inside a raw string. It seems python went with allowing " instead of allowing \ as the last character. 

 However, this shouldn't cause any trouble. 

 If you're worried about not being able to easily write windows folder pathes such as c:\mypath\ then worry not, for, you can represent them as r"C:\mypath" , and, if you need to append a subdirectory name, don't do it with string concatenation, for it's not the right way to do it anyway! use os.path.join 

 &gt;&gt;&gt; import os
&gt;&gt;&gt; os.path.join(r"C:\mypath", "subfolder")
'C:\\mypath\\subfolder'
 
 #2 Another user who has since deleted their answer (not sure if they'd like to be credited) suggested that the Python language designers may be able to simplify the parser design by using the same parsing rules and expanding escaped characters to raw form as an afterthought (if the literal was marked as raw). 

 I thought it was an interesting idea and am including it as community wiki for posterity. 
 #3 Since \" is allowed inside the raw string. Then it can't be used to identify the end of the string literal. 

 Why not stop parsing the string literal when you encounter the first "? 

 If that was the case, then \" wouldn't be allowed inside the string literal. But it is. 
 #4 Another trick is to use chr(92) as it evaluates to "\". 

 I recently had to clean a string of backslashes and the following did the trick: 

 CleanString = DirtyString.replace(chr(92),'')
 

 I realize that this doe not take care of the "why" but the thread attracts many people looking for a solution to an immediate problem. 
 #5 The reason for why r'\' is syntactical incorrect is that although the string expression is raw the used quotes (single or double) always have to be escape since they would mark the end of the quote otherwise. So if you want to express a single quote inside single quoted string, there is no other way than using \' . Same applies for double quotes. 

 But you could use: 

 '\\'
 
 #6 Comming from C it pretty clear to me that a single \ works as escape character allowing you to put special characters such as newlines, tabs and quotes into strings. 

 That does indeed disallow \ as last character since it will escape the " and make the parser choke. But as pointed out earlier \ is legal. 
 #7 some tips : 

 1) if you need to manipulate backslash for path then standard python module os.path is your friend. for example : 

 
 os.path.normpath('c:/folder1/') 
 

 2) if you want to build strings with backslash in it BUT without backslash at the END of your string then raw string is your friend (use 'r' prefix before your literal string). for example : 

 r'\one \two \three'
 

 3) if you need to prefix a string in a variable X with a backslash then you can do this : 

 X='dummy'
bs=r'\ ' # don't forget the space after backslash or you will get EOL error
X2=bs[0]+X # X2 now contains \dummy
 

 4) if you need to create a string with a backslash at the end then combine tip 2 and 3 : 

 voice_name='upper'
lilypond_display=r'\DisplayLilyMusic \ ' # don't forget the space at the end
lilypond_statement=lilypond_display[:-1]+voice_name
 

 now lilypond_statement contains "\DisplayLilyMusic \upper" 

 long live python ! :) 

 n3on 
 #8 In order for you to end a raw string with a slash I suggest you can use this trick: 

 &gt;&gt;&gt; print r"c:\test"'\\'
test\